# my-copyright

./: .gitignore  README.md  asset-manifest.json  index.html  precache-manifest.a7a99a9cfb8d6f00626ee81814e60a22.js  service-worker.js
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/res/: my_copyright.wasm
contract/src/: lib.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
static/css/: 2.885c3557.chunk.css  2.885c3557.chunk.css.map  main.a3655d9a.chunk.css  main.a3655d9a.chunk.css.map
static/js/: 2.c8b6a92a.chunk.js  2.c8b6a92a.chunk.js.LICENSE.txt  2.c8b6a92a.chunk.js.map  main.fcca188e.chunk.js  main.fcca188e.chunk.js.map  runtime-main.26b4f9e1.js  runtime-main.26b4f9e1.js.map
